changed toggle script, fixed toggle on mobile, still need to add rembering if toggle is on or not

--- a/light.css
+++ b/light.css
@@ -293,10 +293,7 @@ html {
   }
   
   /* Add a grey background color on mouse-over */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+  
   
   /* Style the active link (or home/logo) */
   .active {
@@ -305,10 +302,9 @@ html {
     z-index: 100;
   }
   .switch {
-    position: relative;
+    position: sticky;
     display: inline-block;
     bottom: 8px;
-    left: 15px;
     width: 30px;
     height: 17px;
   }
